[package]
name = "rust-game-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced =  { version = "0.9.0", features = ["image", "tokio", "debug"] }
time = { version = "0.3.20", features = ["local-offset"] }
image-generator = { git = "https://github.com/helanhalvan/image-generator.git", branch = "master" }