[package]
name = "rust-game-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
iced =  { version = "0.9.0", features = ["image", "tokio", "debug"] }
time = { version = "0.3.20", features = ["local-offset"] }
iced_native = "0.10.3"
cairo-rs = { version = "0.17.0", features = [ "png" ] }
palette = "0.7.1"
rand = "0.8.5"
enum-iterator = "1.4.0"
itertools = "0.10.5"
noise = { version =  "0.8.2", features = ["images"] }